better streaming support, default the output to :stdio by default, unless the elir.yml config file defines a log_file variable. The ENV now contains all the labels (their singular form), so they can be used by the new RSpec formatter. Many small other improvements.

--- a/rspec_demo/elir.yml
+++ b/rspec_demo/elir.yml
@@ -5,4 +5,6 @@ elir:
     - servers: local
   # and run this command for every combination above
   cmd: bundle exec rspec
+  # uncomment next, to write the cmd output to a file of your choice
+  log_file: results.log
 
