redesign the OTP support for allowing the user to customize the pool resource allocation w/o the need to compile the Elir escript (executable). New version 0.3.15

--- a/rspec_demo/elir.yml
+++ b/rspec_demo/elir.yml
@@ -15,7 +15,7 @@ elir:
   # every run will receive a process id following the formatting hints below
   process:
     name: RUN_ID
-    length: 20
+    length: 5
     # prefix: KE
     # suffix: WL
     # sep: "-"
@@ -25,3 +25,6 @@ elir:
   # uncomment next, to write the cmd output to a file of your choice
   # log_file: results.log
 
+  pool_size: 20
+  max_overflow: 5
+  # suite_timeout: :infinity
